# road_intersection

./: AndroidManifest.xml  Cargo.toml  README.md  explanation.md  prepare.sh  sdl_explanation.md
src/: lib.rs  main.rs  traffic_light.rs  vehicle.rs
