[package]
name = "road_intersection"
version = "0.1.0"
edition = "2021"

[lib]
name = "road_intersection"
crate-type = ["cdylib", "rlib"]  # cdylib needed for cargo-apk

[[bin]]
name = "road_intersection"
path = "src/main.rs"

[dependencies]
sdl2 = { version = "0.38", features = ["bundled"] }
rand = "0.8.5"

[package.metadata.android]
apk_label = "Road Intersection"
assets = "assets"
target_sdk_version = 34
min_sdk_version = 21